[clang-format] harmonize versions
The 3.7 one was never updated to match the 3.8 one.

--- a/.clang-format-3.8
+++ b/.clang-format-3.8
@@ -23,7 +23,7 @@ AlwaysBreakBeforeMultilineStrings: false
 AlwaysBreakTemplateDeclarations: true
 BasedOnStyle: Mozilla
 BinPackArguments: false
-BinPackParameters: false # this applies to template arguments
+BinPackParameters: false
 BreakBeforeBinaryOperators: NonAssignment
 BreakBeforeBraces: Mozilla
 BreakBeforeTernaryOperators: true
