--- a/.clang-format-3.7
+++ b/.clang-format-3.7
@@ -7,7 +7,7 @@
 #
 # http://llvm.org/releases/3.7.0/tools/clang/docs/ClangFormatStyleOptions.html
 AlignAfterOpenBracket: true
-AlignConsecutiveAssignments: true
+AlignConsecutiveAssignments: false
 AlignEscapedNewlinesLeft: false
 AlignOperands: true
 AlignTrailingComments: false
@@ -22,7 +22,7 @@ AlwaysBreakBeforeMultilineStrings: false
 AlwaysBreakTemplateDeclarations: true
 BasedOnStyle: Mozilla
 BinPackArguments: false
-BinPackParameters: true # this applies to template arguments, function arguments and typedefs, so we cannot set this to false (very much unfortunately)!
+BinPackParameters: false
 BreakBeforeBinaryOperators: NonAssignment
 BreakBeforeBraces: Mozilla
 BreakBeforeTernaryOperators: true
